Improve strings and add an icon to depict the reminder type

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -225,4 +225,12 @@
     <string name="remind_on_days_of_month">Напомняне в дни от месеца</string>
     <string name="start_date">Начална дата</string>
     <string name="end_date">Крайна дата</string>
+    <string name="off">Изключено</string>
+    <string name="windowed_interval_reminder">Напомняне за интервал в прозорец</string>
+    <string name="continuous_interval_reminder">Напомняне за непрекъснат интервал</string>
+    <string name="time_based_reminder_help">Задайте конкретни часове (напр. 8:00 ч.) и конфигурирайте повтарящ се модел. Това позволява прецизен контрол върху конкретни делнични дни, дни от месеца или сложни периодични графици (като \"на всеки 3 дни\").</string>
+    <string name="continuous_interval_reminder_help">Стартирайте напомняне въз основа на интервал от време (напр. на всеки 6 часа) от определен момент. Този модел е непрекъснат, като се игнорират ограниченията за времето от деня, докато не бъде деактивиран ръчно.</string>
+    <string name="windowed_interval_reminder_help">Определете дневен активен прозорец (напр. от 9 до 21 ч.), в който първото напомняне винаги е в началния час. Последващите напомняния се задействат на определени интервали до достигане на крайния час. Пълният модел се нулира всеки ден.</string>
+    <string name="linked_reminder">Свързано напомняне</string>
+    <string name="linked_reminder_help">Свързаното напомняне е последващо напомняне, което се планира за определено време след предприемане на действие по основно напомняне (прието или отложено). Това е полезно за лекарства, които трябва да се приемат последователно, със специфично забавяне между тях.</string>
 </resources>
