--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -236,6 +236,8 @@
     <string name="windowed_interval_reminder">Напоминание об интервале в окне</string>
     <string name="continuous_interval_reminder">Напоминание о непрерывном интервале</string>
     <string name="time_based_reminder_help">Установите определенное время (например, 8:00) и настройте повторяющийся шаблон. Это обеспечивает точный контроль над определенными днями недели, днями месяца или сложными периодическими расписаниями (например, «каждые 3 дня»).</string>
-    <string name="continuous_interval_help">Начните напоминание на основе временного интервала (например, каждые 6 часов) с указанного момента. Этот шаблон является непрерывным, игнорируя ограничения по времени суток, пока не будет отключен вручную.</string>
-    <string name="windowed_interval_help">Определите ежедневное активное окно (например, с 9:00 до 21:00), в котором первое напоминание всегда приходится на время начала. Последующие напоминания срабатывают через фиксированные промежутки времени до тех пор, пока не будет достигнуто время окончания. Полный шаблон сбрасывается каждый день.</string>
+    <string name="continuous_interval_reminder_help">Начните напоминание на основе временного интервала (например, каждые 6 часов) с указанного момента. Этот шаблон является непрерывным, игнорируя ограничения по времени суток, пока не будет отключен вручную.</string>
+    <string name="windowed_interval_reminder_help">Определите ежедневное активное окно (например, с 9:00 до 21:00), в котором первое напоминание всегда приходится на время начала. Последующие напоминания срабатывают через фиксированные промежутки времени до тех пор, пока не будет достигнуто время окончания. Полный шаблон сбрасывается каждый день.</string>
+    <string name="linked_reminder">Связанное напоминание</string>
+    <string name="linked_reminder_help">Связанное напоминание — это последующее напоминание, которое планируется через определенное время после выполнения основного напоминания (принятого или отложенного). Это полезно для лекарств, которые необходимо принимать последовательно, с определенной задержкой между ними.</string>
 </resources>
