--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -226,4 +226,11 @@
     <string name="remind_on_days_of_month">மாதத்தின் நாட்களில் நினைவூட்டு</string>
     <string name="start_date">தொடக்க தேதி</string>
     <string name="end_date">முடிவு தேதி</string>
+    <string name="windowed_interval_reminder">சாளர இடைவெளி நினைவூட்டல்</string>
+    <string name="continuous_interval_reminder">தொடர்ச்சியான இடைவெளி நினைவூட்டல்</string>
+    <string name="time_based_reminder_help">குறிப்பிட்ட நேரங்களை அமைக்கவும் (எ.கா., காலை 8:00) மற்றும் மீண்டும் மீண்டும் வரும் வடிவத்தை உள்ளமைக்கவும். இது குறிப்பிட்ட வார நாட்கள், மாதத்தின் நாட்கள் அல்லது சிக்கலான கால அட்டவணைகள் (\'ஒவ்வொரு 3 நாட்களுக்கும்\' போன்ற) மீது துல்லியமான கட்டுப்பாட்டை அனுமதிக்கிறது.</string>
+    <string name="continuous_interval_reminder_help">ஒரு குறிப்பிட்ட தருணத்திலிருந்து ஒரு நேர இடைவெளியின் அடிப்படையில் (எ.கா., ஒவ்வொரு 6 மணி நேரத்திற்கும்) ஒரு நினைவூட்டலைத் தொடங்கவும். இந்த முறை தொடர்ச்சியானது, দিনের நேரக் கட்டுப்பாடுகளைப் புறக்கணித்து, கைமுறையாக செயலிழக்கப்படும் வரை.</string>
+    <string name="windowed_interval_reminder_help">ஒரு தினசரி செயலில் உள்ள சாளரத்தை வரையறுக்கவும் (எ.கா., காலை 9 மணி முதல் இரவு 9 மணி வரை), இதில் முதல் நினைவூட்டல் எப்போதும் தொடக்க நேரத்தில் இருக்கும். முடிவு நேரத்தை அடையும் வரை அடுத்தடுத்த நினைவூட்டல்கள் நிலையான இடைவெளியில் தூண்டப்படும். முழு வடிவமும் ஒவ்வொரு நாளும் மீட்டமைக்கப்படும்.</string>
+    <string name="linked_reminder">இணைக்கப்பட்ட நினைவூட்டல்</string>
+    <string name="linked_reminder_help">இணைக்கப்பட்ட நினைவூட்டல் என்பது ஒரு முதன்மை நினைவூட்டல் செயல்படுத்தப்பட்ட (எடுக்கப்பட்ட அல்லது உறக்கநிலையில் வைக்கப்பட்ட) பிறகு ஒரு குறிப்பிட்ட நேரத்திற்குப் பிறகு திட்டமிடப்பட்ட ஒரு தொடர் நினைவூட்டல் ஆகும். இது தொடர்ச்சியாக எடுத்துக்கொள்ளப்பட வேண்டிய மருந்துகளுக்கு பயனுள்ளதாக இருக்கும், அவற்றுக்கிடையே ஒரு குறிப்பிட்ட தாமதத்துடன்.</string>
 </resources>
