--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -239,6 +239,8 @@
     <string name="windowed_interval_reminder">Нагадування з інтервалом у вікні</string>
     <string name="continuous_interval_reminder">Безперервне нагадування про інтервал</string>
     <string name="time_based_reminder_help">Встановіть певний час (наприклад, 8:00 ранку) і налаштуйте повторюваний шаблон. Це дозволяє точно контролювати певні дні тижня, дні місяця або складні періодичні розклади (наприклад, «кожні 3 дні»).</string>
-    <string name="continuous_interval_help">Почніть нагадування на основі часового інтервалу (наприклад, кожні 6 годин) із зазначеного моменту. Цей шаблон є безперервним, ігноруючи обмеження часу доби, доки не буде деактивовано вручну.</string>
-    <string name="windowed_interval_help">Визначте щоденне активне вікно (наприклад, з 9 ранку до 9 вечора), де перше нагадування завжди відбувається в час початку. Наступні нагадування спрацьовують через фіксовані проміжки часу, доки не буде досягнуто час закінчення. Повний шаблон скидається щодня.</string>
+    <string name="continuous_interval_reminder_help">Почніть нагадування на основі часового інтервалу (наприклад, кожні 6 годин) із зазначеного моменту. Цей шаблон є безперервним, ігноруючи обмеження часу доби, доки не буде деактивовано вручну.</string>
+    <string name="windowed_interval_reminder_help">Визначте щоденне активне вікно (наприклад, з 9 ранку до 9 вечора), де перше нагадування завжди відбувається в час початку. Наступні нагадування спрацьовують через фіксовані проміжки часу, доки не буде досягнуто час закінчення. Повний шаблон скидається щодня.</string>
+    <string name="linked_reminder">Пов\'язане нагадування</string>
+    <string name="linked_reminder_help">Пов\'язане нагадування - це наступне нагадування, яке планується через певний проміжок часу після того, як основне нагадування буде виконано (або прийнято, або відкладено). Це корисно для ліків, які потрібно приймати послідовно, з певним проміжком між ними.</string>
 </resources>
