--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -246,4 +246,11 @@
     <string name="remind_on_days_of_month">تذكير في أيام الشهر</string>
     <string name="start_date">تاريخ البدء</string>
     <string name="end_date">تاريخ الانتهاء</string>
+    <string name="windowed_interval_reminder">تذكير بفاصل زمني محدد</string>
+    <string name="continuous_interval_reminder">تذكير بفاصل زمني مستمر</string>
+    <string name="time_based_reminder_help">عيّن أوقاتًا محددة (على سبيل المثال، 8:00 صباحًا) وقم بتكوين نمط متكرر. يتيح ذلك التحكم الدقيق في أيام الأسبوع المحددة أو أيام الشهر أو الجداول الدورية المعقدة (مثل \"كل 3 أيام\").</string>
+    <string name="continuous_interval_reminder_help">ابدأ تذكيرًا بناءً على فاصل زمني (على سبيل المثال، كل 6 ساعات) من لحظة محددة. هذا النمط مستمر، ويتجاهل قيود الوقت من اليوم، حتى يتم إلغاء تنشيطه يدويًا.</string>
+    <string name="windowed_interval_reminder_help">حدد نافذة نشطة يومية (على سبيل المثال، من 9 صباحًا إلى 9 مساءً) حيث يكون التذكير الأول دائمًا في وقت البدء. يتم إطلاق التذكيرات اللاحقة على فترات زمنية ثابتة حتى يتم الوصول إلى وقت الانتهاء. يتم إعادة تعيين النمط الكامل كل يوم.</string>
+    <string name="linked_reminder">تذكير مرتبط</string>
+    <string name="linked_reminder_help">التذكير المرتبط هو تذكير متابعة يتم جدولته بعد فترة زمنية معينة من اتخاذ إجراء بشأن تذكير أساسي (إما تم تناوله أو تأجيله). هذا مفيد للأدوية التي يجب تناولها بالتتابع، مع تأخير محدد بينها.</string>
 </resources>
