--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -106,7 +106,7 @@
     <string name="edit_event">Επεξεργασία συμβάντος</string>
     <string name="intro_welcome">Καλοσήρθατε στο MedTimer!</string>
     <string name="intro_welcome_description">Το MedTimer είναι μία δωρεάν και ελεύθερη, ανοιχτού κώδικα εφαρμογή υπενθύμισης φαρμακευτικών αγωγών με έμφαση στην ιδιωτικότητα.\n\nΑπαιτεί την άδεια να εμφανίζει ειδοποιήσεις για την υπενθύμιση των φαρμακευτικών αγωγών.</string>
-    <string name="intro_medicine_description">Χρησιμοποιείστε την καρτέλα \"Φαρμακευτικές αγωγές\" για να προσθέσετε το φάρμακο που λαμβάνετε και θέλετε να σας υπενθυμίζεται. Μπορείτε να προσδώσετε σημάνσεις στα φάρμακα και να διαχειριστείτε τα αποθέματά τους.</string>
+    <string name="intro_medicine_description">Χρησιμοποιείστε την καρτέλα \"Φαρμακευτικές αγωγές\" για να προσθέσετε το φάρμακο που λαμβάνετε και θέλετε να σας υπενθυμίζεται. Μπορείτε να προσδώσετε σημάνσεις στα φάρμαка και να διαχειριστείτε τα αποθέματά τους.</string>
     <string name="intro_reminder_description">Επιλέξτε μία φαρμακευτική αγωγή για να επεξεργαστείτε τα στοιχεία της και να ορίσετε υπενθυμίσεις για τις διάφορες δόσεις που πρέπει να λαμβάνετε.\n\nΟι υπενθυμίσεις δύνανται να βασίζονται σε συγκεκριμένη ώρα ή σε χρονικά διαστήματα και μπορούν να περιορίζονται σε ορισμένες ημέρες.</string>
     <string name="intro_notification_description">Μόλις ενεργοποιηθεί μια υπενθύμιση, θα εμφανιστεί μια ειδοποίηση που σας δίνει τη δυνατότητα να σημειώσετε μια δόση ως ληφθείσα (πατώντας το κουμπί «Ελήφθη»), να παραλείψετε τη δόση (απορρίπτοντας την ειδοποίηση) ή να γίνει ξανά υπενθύμιση μετά από κάποιο χρονικό διάστημα («Αναβολή»).</string>
     <string name="intro_overview_description">Στην οθόνη επισκόπησης μπορείτε να δείτε τις επερχόμενες υπενθυμίσεις και τα τελευταία συμβάντα υπενθυμίσεων. Μπορείτε να επεξεργαστείτε τα συμβάντα υπενθυμίσεων σύροντας προς τα δεξιά, και να τα διαγράψετε σύροντας προς τα αριστερά.\n\nΕπιπλέον, μπορείτε να καταχωρίσετε χειροκίνητα επιπρόσθετες δόσεις εκτός των προγραμματισμένων, είτε για κάποια από τις διαμορφωμένες φαρμακευτικές αγωγές, είτε για κάποια προσαρμοσμένη, επιλέγοντας \"Καταχώρηση επιπρόσθετης δόσης\".</string>
@@ -226,4 +226,11 @@
     <string name="remind_on_days_of_month">Υπενθύμιση για τις ημέρες του μήνα</string>
     <string name="start_date">Ημερομηνία έναρξης</string>
     <string name="end_date">Ημερομηνία λήξης</string>
+    <string name="windowed_interval_reminder">Υπενθύμιση με χρονικό διάστημα εντός ενός καθορισμένου ημερήσιου παραθύρου</string>
+    <string name="continuous_interval_reminder">Υπενθύμιση συνεχούς χρονικού διαστήματος</string>
+    <string name="time_based_reminder_help">Ορίστε συγκεκριμένες ώρες (π.χ. 8:00 π.μ.) και διαμορφώστε ένα επαναλαμβανόμενο μοτίβο. Αυτό επιτρέπει τον ακριβή έλεγχο συγκεκριμένων ημερών της εβδομάδας, ημερών του μήνα ή σύνθετων περιοδικών προγραμμάτων (όπως \"κάθε 3 ημέρες\").</string>
+    <string name="continuous_interval_reminder_help">Ξεκινήστε μια υπενθύμιση με βάση ένα χρονικό διάστημα (π.χ. κάθε 6 ώρες) από μια καθορισμένη στιγμή. Αυτό το μοτίβο είναι συνεχές, αγνοώντας τους περιορισμούς της ώρας της ημέρας, έως ότου απενεργοποιηθεί χειροκίνητα.</string>
+    <string name="windowed_interval_reminder_help">Ορίστε ένα καθημερινό ενεργό παράθυρο (π.χ. 9 π.μ. έως 9 μ.μ.) όπου η πρώτη υπενθύμιση είναι πάντα στην ώρα έναρξης. Οι επόμενες υπενθυμίσεις ενεργοποιούνται σε σταθερά χρονικά διαστήματα μέχρι να επιτευχθεί η ώρα λήξης. Ολόκληρο το μοτίβο επαναφέρεται κάθε μέρα.</string>
+    <string name="linked_reminder">Συνδεδεμένη υπενθύμιση</string>
+    <string name="linked_reminder_help">Μια συνδεδεμένη υπενθύμιση είναι μια υπενθύμιση παρακολούθησης που προγραμματίζεται ένα ορισμένο χρονικό διάστημα μετά την ενέργεια μιας κύριας υπενθύμισης (είτε λήφθηκε είτε αναβλήθηκε). Αυτό είναι χρήσιμο για φάρμακα που πρέπει να λαμβάνονται διαδοχικά, με συγκεκριμένη καθυστέρηση μεταξύ τους.</string>
 </resources>
