--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -226,4 +226,11 @@
     <string name="remind_on_days_of_month">Muistuta kuukauden päivinä</string>
     <string name="start_date">Aloituspäivämäärä</string>
     <string name="end_date">Päättymispäivämäärä</string>
+    <string name="windowed_interval_reminder">Ikkunallinen intervallimuistutus</string>
+    <string name="continuous_interval_reminder">Jatkuva intervallimuistutus</string>
+    <string name="time_based_reminder_help">Aseta tietyt ajat (esim. klo 8.00) ja määritä toistuva kaava. Tämä mahdollistaa tarkan hallinnan tietyille viikonpäiville, kuukauden päiville tai monimutkaisille jaksollisille aikatauluille (kuten \"joka 3. päivä\").</string>
+    <string name="continuous_interval_reminder_help">Käynnistä muistutus aikavälin perusteella (esim. 6 tunnin välein) tietystä hetkestä. Tämä malli on jatkuva, ja se jättää huomiotta vuorokaudenajan rajoitukset, kunnes se poistetaan manuaalisesti käytöstä.</string>
+    <string name="windowed_interval_reminder_help">Määritä päivittäinen aktiivinen ikkuna (esim. klo 9–21), jossa ensimmäinen muistutus on aina aloitusajankohtana. Seuraavat muistutukset laukeavat kiintein väliajoin, kunnes päättymisaika saavutetaan. Koko kuvio nollautuu joka päivä.</string>
+    <string name="linked_reminder">Linkitetty muistutus</string>
+    <string name="linked_reminder_help">Linkitetty muistutus on seurantamuistutus, joka ajoitetaan tietyn ajan kuluttua siitä, kun ensisijainen muistutus on kuitattu (joko otettu tai torkutettu). Tämä on hyödyllistä lääkkeille, jotka on otettava peräkkäin, ja joiden välillä on oltava tietty viive.</string>
 </resources>
