--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -229,6 +229,8 @@
     <string name="windowed_interval_reminder">Herinnering met interval binnen een tijdvenster</string>
     <string name="continuous_interval_reminder">Continue interval herinnering</string>
     <string name="time_based_reminder_help">Stel specifieke tijden in (bijv. 8:00 uur) and configureer een terugkerend patroon. Dit maakt nauwkeurige controle over specifieke weekdagen, dagen van de maand of complexe periodieke schema\'s (zoals \'elke 3 dagen\') mogelijk.</string>
-    <string name="continuous_interval_help">Start een herinnering op basis van een tijdsinterval (bijv. elke 6 uur) vanaf een bepaald moment. Dit patroon is continu, negeert de beperkingen van de tijd van de dag, totdat het handmatig wordt gedeactiveerd.</string>
-    <string name="windowed_interval_help">Definieer een dagelijks actief venster (bijv. 9.00 tot 21.00 uur) waar de eerste herinnering altijd op de starttijd is. Volgende herinneringen worden met vaste tussenpozen geactiveerd totdat de eindtijd is bereikt. Het volledige patroon wordt elke dag opnieuw ingesteld.</string>
+    <string name="continuous_interval_reminder_help">Start een herinnering op basis van een tijdsinterval (bijv. elke 6 uur) vanaf een bepaald moment. Dit patroon is continu, negeert de beperkingen van de tijd van de dag, totdat het handmatig wordt gedeactiveerd.</string>
+    <string name="windowed_interval_reminder_help">Definieer een dagelijks actief venster (bijv. 9.00 tot 21.00 uur) waar de eerste herinnering altijd op de starttijd is. Volgende herinneringen worden met vaste tussenpozen geactiveerd totdat de eindtijd is bereikt. Het volledige patroon wordt elke dag opnieuw ingesteld.</string>
+    <string name="linked_reminder">Gekoppelde herinnering</string>
+    <string name="linked_reminder_help">Een gekoppelde herinnering is een vervolgherinnering die een bepaalde tijd na een primaire herinnering wordt gepland (ingenomen of gesnoozed). Dit is handig voor medicijnen die na elkaar moeten worden ingenomen, met een specifieke vertraging ertussen.</string>
 </resources>
