--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -232,5 +232,5 @@
     <string name="continuous_interval_reminder_help">Start een herinnering op basis van een tijdsinterval (bijv. elke 6 uur) vanaf een bepaald moment. Dit patroon is continu, negeert de beperkingen van de tijd van de dag, totdat het handmatig wordt gedeactiveerd.</string>
     <string name="windowed_interval_reminder_help">Definieer een dagelijks actief venster (bijv. 9.00 tot 21.00 uur) waar de eerste herinnering altijd op de starttijd is. Volgende herinneringen worden met vaste tussenpozen geactiveerd totdat de eindtijd is bereikt. Het volledige patroon wordt elke dag opnieuw ingesteld.</string>
     <string name="linked_reminder">Gekoppelde herinnering</string>
-    <string name="linked_reminder_help">Een gekoppelde herinnering is een vervolgherinnering die een bepaalde tijd na een primaire herinnering wordt gepland (ingenomen of gesnoozed). Dit is handig voor medicijnen die na elkaar moeten worden ingenomen, met een specifieke vertraging ertussen.</string>
+    <string name="linked_reminder_help">Een gekoppelde herinnering is een vervolgherinnering die een bepaalde tijd na een primaire herinnering wordt ingenomen. Dit is handig voor medicijnen die na elkaar moeten worden ingenomen, met een specifieke vertraging ertussen.</string>
 </resources>
