--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -253,4 +253,10 @@
     <string name="windowed_interval_reminder_help">حدد نافذة نشطة يومية (على سبيل المثال، من 9 صباحًا إلى 9 مساءً) حيث يكون التذكير الأول دائمًا في وقت البدء. يتم إطلاق التذكيرات اللاحقة على فترات زمنية ثابتة حتى يتم الوصول إلى وقت الانتهاء. يتم إعادة تعيين النمط الكامل كل يوم.</string>
     <string name="linked_reminder">تذكير مرتبط</string>
     <string name="linked_reminder_help">التذكير المرتبط هو تذكير متابعة يتم جدولته بعد فترة زمنية معينة من اتخاذ إجراء بشأن تذكير أساسي (إما تم تناوله أو تأجيله). هذا مفيد للأدوية التي يجب تناولها بالتتابع، مع تأخير محدد بينها.</string>
+    <string name="add_linked_reminder_summary">إنشاء تذكير متابعة يتم جدولته بعد فترة زمنية معينة من ظهور هذا التذكير.</string>
+    <string name="cyclic_reminder_summary">يُكوِّن نمطًا متكررًا من الأيام النشطة وأيام الإيقاف المؤقت بدءًا من تاريخ معين. سيرسل التذكير إشعارًا فقط في الأيام النشطة. استخدم هذا لأدوية مثل حبوب منع الحمل.</string>
+    <string name="variable_amount_summary">عندما يكون نشطًا، يظهر مربع حوار لإدخال الجرعة عند أخذ التذكير.</string>
+    <string name="automatically_taken_summary">عندما يكون نشطًا، لا يتم عرض التذكير كإشعار ويتم تحديده تلقائيًا على أنه تم أخذه (يمكن استخدامه لتتبع المخزون فقط).</string>
+    <string name="reminder_status_summary">يمكن أن تكون التذكيرات نشطة وغير نشطة. إذا كانت غير نشطة، فلن يتم إرسال أي إشعار. يمكن تكوين هذا بشكل ثابت أو بناءً على التواريخ. استخدم هذا لتكوين التخفيض التدريجي للدواء.</string>
+    <string name="further_settings">إعدادات إضافية</string>
 </resources>
