--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -233,4 +233,10 @@
     <string name="windowed_interval_reminder_help">Определете дневен активен прозорец (напр. от 9 до 21 ч.), в който първото напомняне винаги е в началния час. Последващите напомняния се задействат на определени интервали до достигане на крайния час. Пълният модел се нулира всеки ден.</string>
     <string name="linked_reminder">Свързано напомняне</string>
     <string name="linked_reminder_help">Свързаното напомняне е последващо напомняне, което се планира за определено време след предприемане на действие по основно напомняне (прието или отложено). Това е полезно за лекарства, които трябва да се приемат последователно, със специфично забавяне между тях.</string>
+    <string name="add_linked_reminder_summary">Създава последващо напомняне, което се насрочва за определен период от време след задействането на това напомняне.</string>
+    <string name="cyclic_reminder_summary">Конфигурира повтарящ се модел на активни и паузирани дни, започвайки от дадена дата. Напомнянето ще изпраща известие само в активните дни. Използвайте това за лекарства като противозачатъчни хапчета.</string>
+    <string name="variable_amount_summary">Когато е активно, се показва диалогов прозорец за въвеждане на дозата, когато напомнянето е прието.</string>
+    <string name="automatically_taken_summary">Когато е активно, напомнянето не се показва като известие и автоматично се маркира като прието (може да се използва само за проследяване на наличността).</string>
+    <string name="reminder_status_summary">Напомнянията могат да бъдат активни и неактивни. Ако са неактивни, не се изпраща известие. Това може да бъде конфигурирано статично или въз основа на дати. Използвайте това за конфигуриране на постепенно спиране на лекарство.</string>
+    <string name="further_settings">Допълнителни настройки</string>
 </resources>
