--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -240,4 +240,10 @@
     <string name="windowed_interval_reminder_help">Определите ежедневное активное окно (например, с 9:00 до 21:00), в котором первое напоминание всегда приходится на время начала. Последующие напоминания срабатывают через фиксированные промежутки времени до тех пор, пока не будет достигнуто время окончания. Полный шаблон сбрасывается каждый день.</string>
     <string name="linked_reminder">Связанное напоминание</string>
     <string name="linked_reminder_help">Связанное напоминание — это последующее напоминание, которое планируется через определенное время после выполнения основного напоминания (принятого или отложенного). Это полезно для лекарств, которые необходимо принимать последовательно, с определенной задержкой между ними.</string>
+    <string name="add_linked_reminder_summary">Создает последующее напоминание, которое планируется через определенное время после этого напоминания.</string>
+    <string name="cyclic_reminder_summary">Настраивает повторяющийся шаблон активных и приостановленных дней, начиная с заданной даты. Напоминание будет вызывать уведомление только в активные дни. Используйте это для таких лекарств, как противозачаточные таблетки.</string>
+    <string name="variable_amount_summary">Когда активно, при приеме напоминания отображается диалоговое окно для ввода дозировки.</string>
+    <string name="automatically_taken_summary">Когда активно, напоминание не отображается в виде уведомления и автоматически помечается как принятое (можно использовать только для отслеживания запасов).</string>
+    <string name="reminder_status_summary">Напоминания могут быть активными и неактивными. Если они неактивны, уведомление не вызывается. Это можно настроить статически или на основе дат. Используйте это для настройки постепенного снижения дозы лекарства.</string>
+    <string name="further_settings">Дополнительные настройки</string>
 </resources>
